Server side response to API request for tweetdata and tweetdatalist added.
